# Diligence

./: .dockerignore  .env.example  .gitignore  AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OUTSTANDING.md  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: config.py  database.py  main.py
content/: .recipe-candidates-dairy-free.json  .recipe-candidates.json  .recipe-crawler-state.json  recipes-summary.csv  recipes.json
content/meal-plans/: 3-day-fast-protocol.md
content/recipes/: 25-minute-baked-salmon-filets-with-lemon-and-garlic.md  INDEX.md  asian-keto-chicken-stir-fry-with-broccoli.md  bacon-wrapped-pork-tenderloin-no-sugar.md  caramelized-onion-and-bacon-pork-chops.md  classic-keto-hamburger.md  coconut-curry-turmeric-chicken-whole30-anti-inflammatory.md  creamy-low-carb-tuscan-shrimp.md  crispy-cuban-roast-pork-lechon-asado.md  crispy-keto-chicken-thighs-with-lemon-butter-caper-sauce.md  crispy-keto-tuna-burgers.md  crustless-keto-broccoli-and-bacon-quiche.md  easiest-ever-slow-cooker-pulled-pork-keto-whole30.md  easy-keto-chicken-piccata-with-lemon-caper-sauce.md  easy-paleo-salmon-salad-bowls-whole30-keto.md  garlic-ginger-stir-fry-with-shrimp-and-cabbage.md  ginger-lime-salmon-gluten-free-whole30-paleo-gaps-aip-keto.md  high-protein-turkey-breakfast-burger.md  indian-keto-chicken-korma.md  italian-keto-meatballs-with-mozzarella-cheese.md  kerala-style-chicken-curry-with-coconut-cream.md  keto-asian-beef-salad.md  keto-asian-chicken-with-peanut-coleslaw.md  keto-bacon-and-eggs-plate.md  (+60 more)
db/: Dockerfile
diligence/: __init__.py  __main__.py  cli.py  config.py  database.py  main.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
mcp-connector/: Dockerfile  requirements.txt  server.py
(+123 files in other folders)
